tests/ui/storage_class/runtime_descriptor_array_error.stderr
error: descriptor indexing must use &RuntimeArray<T>, not &[T]
 --> $DIR/runtime_descriptor_array_error.rs:7:52
  |
7 |     #[spirv(descriptor_set = 0, binding = 0)] one: &[Image!(2D, type=f32, sampled)],
  |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use &[T] instead of &RuntimeArray<T>
 --> $DIR/runtime_descriptor_array_error.rs:8:61
  |
8 |     #[spirv(uniform, descriptor_set = 0, binding = 0)] two: &RuntimeArray<u32>,
  |                                                             ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

